# catalyst

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  catalyst.sln  engine.properties  make.bat  premake5.lua
BuildScripts/: embed_file.py
CMake/: DependencyConfiguration.cmake  DependencyFetching.cmake  gen_component_anchors.py
Catalyst-Editor/: CMakeLists.txt  Catalyst.Editor.rc  imgui.ini  resource.h
Catalyst-Editor/include/: EditorApplication.h  EditorConfig.h  EditorGUI.h
Catalyst-Editor/include/Assets/: Asset.h  MeshAsset.h  TextureAsset.h
Catalyst-Editor/include/Debug/: Gizmos.h
Catalyst-Editor/include/Editors/: Editor.h  LightComponentEditor.h  StaticMeshComponentEditor.h
Catalyst-Editor/include/Viewport/: ViewportCameraActor.h  ViewportRenderer.h
Catalyst-Editor/include/Windows/: ContentWindow.h  EditorWindow.h  HierarchyWindow.h  InspectorWindow.h  ViewportWindow.h
Catalyst-Editor/resources/config/: editor.xml
Catalyst-Editor/resources/models/: SM_fatrat.fbx
Catalyst-Editor/resources/shaders/: test.shader
Catalyst-Editor/source/: EditorApplication.cpp  EditorGUI.cpp  main.cpp
Catalyst-Editor/source/Assets/: Asset.cpp  MeshAsset.cpp  TextureAsset.cpp
Catalyst-Editor/source/Debug/: Gizmos.cpp
Catalyst-Editor/source/Editors/: Editor.cpp  LightComponentEditor.cpp  StaticMeshComponentEditor.cpp
Catalyst-Editor/source/Viewport/: ViewportCameraActor.cpp  ViewportRenderer.cpp
Catalyst-Editor/source/Windows/: ContentWindow.cpp  EditorWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  ViewportWindow.cpp
Catalyst/Core/: CMakeLists.txt  Catalyst.Core.rc
Catalyst/Core/Config/: engine.xml
Catalyst/Core/include/: Application.h  Callback.h  Catalyst.h  CatalystTime.h  CoreModule.h  EngineConfig.h  IModule.h  Object.h  Screen.h  UUID.h
Catalyst/Core/include/Collections/: TList.h  TList.inl  TMap.h
Catalyst/Core/include/Utility/: Color.h  Config.h  ConfigValue.h  LINQ.h  LinkedList.h  PolyDeleter.h  StringUtils.h
Catalyst/Core/resources/config/: engine.xml
Catalyst/Core/source/: Application.cpp  CatalystTime.cpp  CoreModule.cpp  IModule.cpp  Object.cpp  Screen.cpp  StringUtils.cpp  UUID.cpp  cacorepch.cpp  dllmain.cpp
Catalyst/Core/source/Utility/: Color.cpp  Config.cpp  ConfigValue.cpp  StringUtils.cpp
Catalyst/Gameplay/: CMakeLists.txt
Catalyst/Gameplay/include/: Actor.h  ActorComponent.h  ActorTransform.h  ComponentRegistry.h  GameplayModule.h  HeaderMacros.h  cagameplaypch.h
Catalyst/Gameplay/source/: Actor.cpp  ActorComponent.cpp  ActorTransform.cpp  ComponentRegistry.cpp  GameplayModule.cpp  cagameplaypch.cpp  dllmain.cpp
Catalyst/Graphics/: CMakeLists.txt
Catalyst/Graphics/include/: GraphicsModule.h  IRenderFeature.h  Material.h  Shader.h
Catalyst/Graphics/include/CShade/: ShaderParser.h  ShaderProperty.h  ShaderPropertyParser.h
Catalyst/Graphics/include/Components/: CameraComponent.h  LightComponent.h  StaticMeshComponent.h
Catalyst/Graphics/include/Rendering/: Material.h  Mesh.h  Shader.h  ShaderParser.h  Texture.h
Catalyst/Graphics/source/: GraphicsModule.cpp  IRenderFeature.cpp  Material.cpp  Shader.cpp  ShaderParser.cpp  Texture.cpp  cagraphicspch.cpp  dllmain.cpp
Catalyst/Graphics/source/CShade/: ShaderParser.cpp  ShaderProperty.cpp  ShaderPropertyParser.cpp
Catalyst/Graphics/source/Components/: CameraComponent.cpp  LightComponent.cpp  StaticMeshComponent.cpp
Catalyst/Graphics/source/Rendering/: Material.cpp  Mesh.cpp  Shader.cpp  ShaderParser.cpp  Texture.cpp
Catalyst/Input/: CMakeLists.txt
Catalyst/Input/include/: Bindings.h  InputModule.h
Catalyst/Input/include/Actions/: CompositeAction1DAxis.h  CompositeAction2DAxis.h  InputAction.h  InputAction1DAxis.h  InputAction2DAxis.h  InputActionButton.h
Catalyst/Input/source/: InputModule.cpp  cainputpch.cpp  dllmain.cpp
Catalyst/Input/source/Actions/: CompositeAction1DAxis.cpp  CompositeAction2DAxis.cpp  InputAction1DAxis.cpp  InputAction2DAxis.cpp  InputActionButton.cpp
Catalyst/Maths/: CMakeLists.txt
Catalyst/Maths/include/: CatalystMath.h  MathsModule.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  camathspch.h
Catalyst/Maths/include/Mathematics/: CatalystMath.h  Color.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
Catalyst/Maths/source/: CatalystMath.cpp  MathsModule.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  camathspch.cpp  dllmain.cpp
Catalyst/Maths/source/Mathematics/: Color.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Catalyst/Physics/: CMakeLists.txt
Catalyst/Physics/include/: PhysicsModule.h
Catalyst/Physics/source/: PhysicsModule.cpp  caphysicspch.cpp  dllmain.cpp
Catalyst/Scripting/: CMakeLists.txt
Catalyst/Scripting/include/: ScriptingModule.h  cascriptingpch.h
Catalyst/Scripting/source/: ScriptingModule.cpp  cascriptingpch.cpp  dllmain.cpp
Catalyst/catalyst-editor/: TestActor.cpp  TestActor.h  TestLight.cpp  TestLight.h  TestPointLightActor.cpp  TestPointLightActor.h  catalyst-editor.vcxproj  catalyst-editor.vcxproj.filters  main.cpp
Catalyst/catalyst-editor/source/: EditorApplication.cpp  EditorApplication.hpp  ViewportCamera.cpp  ViewportCamera.h
Catalyst/catalyst-engine/: catalyst-engine.rc  catalyst-engine.vcxproj  catalyst-engine.vcxproj.filters  resource.h
Dependencies/include/Catalyst/: Catalyst.hpp
Dependencies/include/ImGui/: imconfig.h  imgui.h
Dependencies/include/glad/: gl.h
Dependencies/lib/ImGui/: ImGui.lib  ImGui_d.lib
SampleGame/: CMakeLists.txt  imgui.ini
SampleGame/source/: main.cpp
TestProject/: TestProject.vcxproj  TestProject.vcxproj.filters
TestProject/Content/Shaders/: Standard.frag  Standard.shader  Standard.vert  normalLit.frag  normalLit.vert
Tests/Catalyst.Maths.Tests/include/: TestToString.h  camathspch.h
Tests/Catalyst.Maths.Tests/source/: Matrix3Tests.cpp  Matrix4Tests.cpp  QuaternionTests.cpp  Vector2Tests.cpp  (+3 more)
Tests/Maths/: CMakeLists.txt
premake/scripts/: module_gen.lua  properties_file.lua
(+96 files in other folders)
